--- a/EmployeeDirectory.html
+++ b/EmployeeDirectory.html
@@ -7,100 +7,92 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;500;600;700;800;900&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="EmployeeDirectory.css">
-    <script type="text/javascript" src="EmployeeDirectory.js"></script>
-    <script src="https://kit.fontawesome.com/66b040a559.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 </head>
-<body onload="filterCount(),renderEmployeeCards()">
-    <header>
+<body>
+    <header class="header">
         <div class="logo">
             <img src="images/saketa-logo.png" alt="">
             <p>saketa</p>
         </div>
-        <div class="heading">
+        <div class="app-Title">
             <p>Employment Directory</p>
             <p>The ultimate People Directory Experience</p>
         </div>
-        <div class="greet">
+        <div class="profile">
             <p>Welcome, </p>
             <p>karthik sai varma </p>
-            <img src="images/profile pic.jpg" alt="">
+            <img src="images/profile-pic.jpg" alt="">
         </div>
     </header>
-    <div class="mainBody">
-        <div class="filters">
+    <div class="body-container">
+        <div class="left-filters">
             <div class="departments">
                 <p>Departments</p>
-                <ul>
-                    <li id="itFilter">IT</li>
-                    <li id="hrFilter">Human Resources</li>
-                    <li id="mdFilter">MD</li>
-                    <li id="sFilter">Sales</li>
-                </ul>
+                <div id="departmentList">
+                </div>
             </div>
             <div class="offices">
                 <p>Offices</p>
-                <ul>
-                    <li id="seattleFilter">Seattle</li>
-                    <li id="indiaFilter">India</li>
-                </ul>
+                <div id="officesList">
+                </div>
             </div>
-            <div class="JobTitles">
+            <div class="job-titles">
                 <p>Job titles</p>
-                <ul>
-                    <li id="spphFilter">SharePoint Practice Head</li>
-                    <li id="netFilter">.Net development lead</li>
-                    <li id="reFilter">Recruiting Expert</li>
-                    <li id="bidFilter">BI Developer</li>
-                    <li id="baFilter">Business analyst</li>
-                </ul>
+                <div id="jobTitleList">
+                </div>
             </div>
         </div>
-        <div class="directory">
-            <div class="searchBar">
-                <div class="letters">
-                    <button>*</button>
-                    <button>A</button>
-                    <button>B</button>
-                    <button>C</button>
-                    <button>D</button>
-                    <button>E</button>
-                    <button>F</button>
-                    <button>G</button>
-                    <button>H</button>
-                    <button>I</button>
-                    <button>J</button>
-                    <button>K</button>
-                    <button>L</button>
-                    <button>M</button>
-                    <button>N</button>
-                    <button>O</button>
-                    <button>P</button>
-                    <button>Q</button>
-                    <button>R</button>
-                    <button>S</button>
-                    <button>T</button>
-                    <button>U</button>
-                    <button>V</button>
-                    <button>W</button>
-                    <button>X</button>
-                    <button>Y</button>
-                    <button>Z</button>
+        <div class="emp-directory">
+            <div class="search-bar">
+                <div class="letters" id="LettersDiv">
+                    <label><i class="fa-solid fa-user"></i></label>
+                    <!--letters will be displayed here-->
+                    
                 </div>
-                <div class="searchBox">
-                    <label for="search" class="searchLabel">Search</label>
+                <div class="search-box">
+                    <label for="search" class="search-label">Search</label>
                     <input type="text" id="search" placeholder="Enter any keyword">
-                    <button class="clearbtn">Clear</button>
-                    <div class="filterdiv">
-                        <label for="filter" class="filterLabel">Filter by</label>
+                    <button class="clear-btn" id="ClearBtn">Clear</button>
+                    <div class="filter-div">
+                        <label for="filter" class="filter-label">Filter by</label>
                         <select name="preferedName" id="filter">
                             <option value="" disabled selected hidden>Preffered Name</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
+                            <option value="FirstName">First Name</option>
+                            <option value="LastName">Last Name</option>
+                            <option value="Email">Email</option>
+                            <option value="JobTitle">Job Title</option>
+                            <option value="Office">Office</option>
+                            <option value="Department">Department</option>
+                            <option value="PhoneNumber">Phone Number</option>
+                            <option value="SkypeID">Skype ID</option>
+                            <option value="None">None</option>
                         </select>
                     </div>
-                    <button class="addEmployee">Add Employee</button>
+                    <label for="addBtn" class="add-employee" id="addEmpBtn">Add Employee</label>
+                    <input type="checkbox" id="addBtn">
+                <div class="form-popup" id="myForm">
+                    <form action="" class="form-container" id="form">
+                        <label for="First name">First Name:</label>
+                        <input type="text" placeholder="" name="FirstName" id="FirstName" required>
+                        <p><b>Note:</b>First letter of FirstName should be capital</p>
+                        <label for="Last Name">Last Name:</label>
+                        <input type="text" placeholder="" name="LastName" required><br>
+                        <label for="Email">Email:</label>
+                        <input type="text" placeholder="" name="Email" required><br>
+                        <label for="Job Title">Job Title:</label>
+                        <input type="text" placeholder="" name="JobTitle" required><br>
+                        <label for="Office">Office:</label>
+                        <input type="text" placeholder="" name="Office" required><br>
+                        <label for="Department">Department:</label>
+                        <input type="text" placeholder="" name="Department" required><br>
+                        <label for="Phone Number">Phone Number:</label>
+                        <input type="text" placeholder="" name="PhoneNumber" required><br>
+                        <label for="Skype ID">Skype ID:</label>
+                        <input type="text" placeholder="" name="SkypeID" required><br>
+                        <button  id="SubmitBtn">Save</button>
+                        <button type="reset" id="CancelBtn">Cancel</button>
+                    </form>
+                </div>
                 </div>
                 <div class="note">
                     <p>
@@ -108,9 +100,14 @@
                     </p>
                 </div>
             </div>
-            <div id="employeeDiv">
+
+            <div id="employee-div">
             </div>
+
         </div>
     </div>
+    <script type="text/javascript" src="EmployeeDirectory.js"></script>
+    <!-- <script type="text/javascript" src="test.js"></script> -->
+    <script src="https://kit.fontawesome.com/66b040a559.js" crossorigin="anonymous"></script>
 </body>
 </html>
