--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;500;600;700;800;900&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="EmployeeDirectory.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header class="header">
@@ -15,12 +15,12 @@
             <p>saketa</p>
         </div>
         <div class="app-title">
-            <p>Employment Directory</p>
-            <p>The ultimate People Directory Experience</p>
+            <h2>Employment Directory</h2>
+            <h5>The ultimate People Directory Experience</h5>
         </div>
         <div class="profile">
-            <p>Welcome, </p>
-            <p>karthik</p>
+            <h3>Welcome, </h3>
+            <h3>karthik</h3>
             <img src="images/dp.jpg" alt="">
         </div>
     </header>
@@ -29,32 +29,35 @@
             <div class="departments">
                 <p>Departments</p>
                 <div id="departmentList">
+                    <!--Departments will be displayed here-->
                 </div>
             </div>
             <div class="offices">
                 <p>Offices</p>
                 <div id="officesList">
+                    <!--offices will be displayed here-->
                 </div>
             </div>
             <div class="job-titles">
                 <p>Job titles</p>
                 <div id="jobTitleList">
+                    <!--Job titles will be displayed here-->
                 </div>
             </div>
         </div>
         <div class="emp-directory">
             <div class="search-bar">
-                <div class="letters" id="lettersDiv">
+                <div class="letters" id="lettersContainer">
                     <label><i class="fa-solid fa-user"></i></label>
                     <!--letters will be displayed here-->    
                 </div>
                 <div class="search-box">
-                    <div class="search-div">
+                    <div class="search-container">
                         <label for="search" class="search-label">Search</label>
                         <input type="text" id="search" placeholder="Enter any keyword">
                         <button class="clear-btn" id="clearBtn">Clear</button>
                     </div>
-                    <div class="filter-div">
+                    <div class="filter-container">
                         <label for="filterBy" class="filter-label">Filter by</label>
                         <select name="preferedName" id="filterBy">
                             <option value="" disabled selected>Prefered Name</option>
@@ -68,8 +71,7 @@
                             <option value="SkypeID">Skype ID</option>
                         </select>
                     </div>
-                <label for="addBtn" class="add-employee" id="addEmpBtn">Add Employee</label>
-                    <input type="checkbox" id="addBtn">
+                <button class="add-employee" id="addEmpBtn">Add Employee</button>
                 <div class="form-popup" id="myForm">
                     <form class="form-container" id="form">
                         <label for="First name">First Name:</label>
@@ -99,12 +101,12 @@
                     </p>
                 </div>
             </div>
-            <div id="employeeDiv">
+            <div id="employeeContainer">
             </div>
+            
         </div>
     </div>
-    <script type="text/javascript" src="EmployeeDirectory.js"></script>
-    <!-- <script type="text/javascript" src="sample.js"></script> -->
+    <script type="text/javascript" src="index.js"></script>
     <script src="https://kit.fontawesome.com/66b040a559.js" crossorigin="anonymous"></script>
 </body>
 </html>
